fixed modal overflow and hideModal function

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,7 @@ body {
   -ms-overflow-style: none; /* Internet Explorer 10+ */
   scrollbar-width: none; /* Firefox */
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
